@@ -1,3 +1,10 @@
+2011-08-25  Peter Schueller  <ps@kr.tuwien.ac.at>
+
+	* include/dlvhex/HexGrammar.h: Parsing predicate. Differentiation between predicates and terms.
+	* include/dlvhex/PredicateTable.hpp: Likewise.
+	* include/dlvhex/HexGrammar.tcc: Likewise.
+	* include/dlvhex/Module.hpp: Likewise.
+
 2011-08-20  Peter Schueller  <ps@kr.tuwien.ac.at>
 
 	* include/dlvhex/HexGrammar.tcc: Removed expectation operator that interfered
